Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ a {
 	<li><a href="demo-preloadPage-line.html" target="_blank">Line preloader it's only one of a lots future features</a></li>
 	<li><a href="demo-add-manually-files.html" target="_blank">Passing data with JSON file</a></li>
 </ul>
-<h3>Documentation</h3>
-<p>Coming soon!</p>
-<a href="jQuery-html5Loader.zip">Download source</a>
+<h3>Download and Documentation</h3>
+
+<a href="https://github.com/GianlucaGuarini/jQuery.html5loader/" target="_blank">Download source and Fork on Github</a>
 
 </body>
 </html>
