index.html added the new demo

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ a {
 <h3>Demos</h3>
 <ul>
 	<li><a href="demo-preloadPage-circular-glow.html" target="_blank">Nice glow graphic + automatic page preloding</a></li>
+	<li><a href="demo-draw-more-canvas.html" target="_blank">FUN! Draw more than one canvas without any reason</a></li>
 	<li><a href="demo-preloadPage-circular.html" target="_blank">Automatic preload of an html page + Circular default preloader</a></li>
 	<li><a href="demo-preloadPage-line.html" target="_blank">Line preloader it's only one of a lots future features</a></li>
 	<li><a href="demo-add-manually-files.html" target="_blank">Passing data with JSON file</a></li>
 </ul>
 <h3>Download and Documentation</h3>
-
 <a href="https://github.com/GianlucaGuarini/jQuery.html5loader/" target="_blank">Download source and Fork on Github</a>
 
 </body>
