--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ body {
 	padding: 10px;
 	background: #000;
 	color:#999;
+	font-family:arial;
 }
 #html5Loader {
 	width:400px;
@@ -25,15 +26,15 @@ a {
 </head>
 <body>
 <h1>Html5 loader jQuery plug-in</h1>
-<h2>(Beta version 0.2)</h2>
-<p>This plug-in creates a nice preloader useing html5 canvas API to draw the percentage during the page loading. Now it works just with images but I hope soon it will work also with audio and video objects.</p>
+<h2>(Beta version 1.0)</h2>
+<p>Now you can preload your HTML 5 page with this nice plug in, passing data via JSON. You can customize it changing colors and style. <strong style="color:white">It can preload video, audio, images and js.</strong></p>
 <h3>Demos</h3>
 <ul>
-	<li><a href="demo-preloadPage-circular-glow.html" target="_blank">Nice glow graphic + automatic page preloding</a></li>
-	<li><a href="demo-draw-more-canvas.html" target="_blank">FUN! Draw more than one canvas without any reason</a></li>
-	<li><a href="demo-preloadPage-circular.html" target="_blank">Automatic preload of an html page + Circular default preloader</a></li>
-	<li><a href="demo-preloadPage-line.html" target="_blank">Line preloader it's only one of a lots future features</a></li>
-	<li><a href="demo-add-manually-files.html" target="_blank">Passing data with JSON file</a></li>
+	<li><a href="examples/demo-circular-font.html" target="_blank">COOL (font famyly + glow + lineWidth) customization</a></li>
+	<li><a href="examples/demo-circular-glow.html" target="_blank">Glow circular preloader</a></li>
+	<li><a href="examples/demo-draw-more-canvas.html" target="_blank">FUN! Draw more than one canvas without any reason</a></li>
+	<li><a href="examples/demo-circular.html" target="_blank">Circular default preloader</a></li>
+	<li><a href="examples/demo-line.html" target="_blank">Line preloader</a></li>
 </ul>
 <h3>Download and Documentation</h3>
 <a href="https://github.com/GianlucaGuarini/jQuery.html5loader/" target="_blank">Download source and Fork on Github</a>
