added progressive loading on media objects

--- a/examples/demo-circular.html
+++ b/examples/demo-circular.html
@@ -32,9 +32,14 @@ body {
 <h1>Remember to load this page on a server!</h1>
 <div id="wrapper">
 <video width="960" height="400" id="myVideo" controls="controls" >
-	<source src="http://www.gianlucaguarini.com/video_banner.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
-	<source src="http://www.gianlucaguarini.com/video_banner.webm" type='video/webm; codecs="vp8, vorbis"' />
-	<source src="http://www.gianlucaguarini.com/video_banner.ogg" type='video/ogg; codecs="theora, vorbis"' />
+	<source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+    <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm; codecs="vp8, vorbis"' />
+    <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg; codecs="theora, vorbis"' />
+</video>
+<video width="560" height="400" id="myVideo2" controls="controls" >
+	<source src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'  />
+	<source src="http://clips.vorwaerts-gmbh.de/VfE.webm"      type='video/webm; codecs="vp8, vorbis"' />
+	<source src="http://clips.vorwaerts-gmbh.de/VfE.ogv"       type='video/ogg; codecs="theora, vorbis"'  />
 </video>
 <audio id="myAudio" controls="controls">
 	<source src="../files/creep.mp3" />
