jquery updated to 1.7 version, added a minified version of plugin and removed the old backup version

--- a/examples/demo-circular.html
+++ b/examples/demo-circular.html
@@ -23,7 +23,7 @@ body {
 </style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/modernizr.js"></script>
-<script src="../js/jQuery.html5Loader.js"></script>
+<script src="../js/jQuery.html5Loader.min.js"></script>
 
 </head>
 <body>
