--- a/examples/demo-draw-more-canvas.html
+++ b/examples/demo-draw-more-canvas.html
@@ -23,7 +23,7 @@ body {
 </style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/modernizr.js"></script>
-<script src="../js/jQuery.html5Loader.js"></script>
+<script src="../js/jQuery.html5Loader.min.js"></script>
 
 </head>
 <body>
