gianluca guarini logo added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ a {
 </style>
 </head>
 <body>
+<a href="http://www.gianlucaguarini.com" target="_blank"><img border="0" src="http://www.gianlucaguarini.com/css/img/Gianluca-Guarini-logo.png" alt="Gianluca Guarini [Logo]" /></a>
 <h1>Html5 loader jQuery plug-in</h1>
 <h2>(Beta version 1.0)</h2>
 <p>Now you can preload your HTML 5 page with this nice plug in, passing data via JSON. You can customize it changing colors and style. <strong style="color:white">It can preload video, audio, images and js.</strong></p>
