--- a/examples/demo-circular-font.html
+++ b/examples/demo-circular-font.html
@@ -24,7 +24,7 @@ body {
 <link href='http://fonts.googleapis.com/css?family=Varela+Round|Lobster+Two' rel='stylesheet' type='text/css'>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/modernizr.js"></script>
-<script src="../js/jQuery.html5Loader.min.js"></script>
+<script src="../js/jQuery.html5Loader.js"></script>
 
 </head>
 <body>
