--- a/examples/demo-circular-glow.html
+++ b/examples/demo-circular-glow.html
@@ -27,7 +27,7 @@ body {
 </style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/modernizr.js"></script>
-<script src="../js/jQuery.html5Loader.min.js"></script>
+<script src="../js/jQuery.html5Loader.js"></script>
 
 
 
