--- a/examples/demo-circular.html
+++ b/examples/demo-circular.html
@@ -56,13 +56,18 @@ div#wrapper > * {
 			<source src="../files/creep.mp3" />
 			<source src="../files/creep.ogg" />
 		</audio>
-		<img src="../files/Hydrangeas.jpg">
-		<img src="../files/Koala.jpg">
-		<img src="../files/Lighthouse.jpg">
-		<img src="../files/Penguins.jpg">
-		<img src="../files/Tulips.jpg">
-		<img src="../files/Chrysanthemum.jpg">
-		<img src="../files/Desert.jpg"></div>
+		<img src="../files/image1.jpg">
+		<img src="../files/image2.jpg">
+		<img src="../files/image3.jpg">
+		<img src="../files/image4.jpg">
+		<img src="../files/image5.jpg">
+		<img src="../files/image6.jpg">
+		<img src="../files/image7.jpg">
+		<img src="../files/image8.jpg">
+		<img src="../files/image9.jpg">
+		<img src="../files/image10.jpg">
+		<img src="../files/image11.jpg">
+		</div>
 	<script type="text/javascript">
 //init
 var loaderAnimation = $("#html5Loader").LoaderAnimation();
