update to the 1.5 version

--- a/examples/demo-append-sources.html
+++ b/examples/demo-append-sources.html
@@ -42,7 +42,7 @@ div#wrapper > * {
 </head>
 <body>
 	<div id="html5Loader"></div>
-	<div id="wrapper"></div>
+	<div id="wrapper"><p>All Image Rights Reserved</p></div>
 	<script type="text/javascript">
 	//init
 	var loaderAnimation = $("#html5Loader").LoaderAnimation({
