--- a/examples/demo-big-counter.html
+++ b/examples/demo-big-counter.html
@@ -70,6 +70,7 @@ div#wrapper > * {
 		<img src="../files/image9.jpg">
 		<img src="../files/image10.jpg">
 		<img src="../files/image11.jpg">
+		<p>All Image Rights Reserved</p>
 	</div>
 	<script type="text/javascript">
 	//init
