--- a/examples/demo-circular.html
+++ b/examples/demo-circular.html
@@ -67,7 +67,8 @@ div#wrapper > * {
 		<img src="../files/image9.jpg">
 		<img src="../files/image10.jpg">
 		<img src="../files/image11.jpg">
-		</div>
+		<p>All Image Rights Reserved</p>
+	</div>
 	<script type="text/javascript">
 //init
 var loaderAnimation = $("#html5Loader").LoaderAnimation();
