--- a/examples/demo-line.html
+++ b/examples/demo-line.html
@@ -63,6 +63,7 @@ div#wrapper > * {
 		<img src="../files/Tulips.jpg">
 		<img src="../files/Chrysanthemum.jpg">
 		<img src="../files/Desert.jpg"></div>
+		<p>All Image Rights Reserved</p>
 	<script type="text/javascript">
 	//init
 	var loaderAnimation = $("#html5Loader").LoaderAnimation();
