--- a/examples/demo-line.html
+++ b/examples/demo-line.html
@@ -67,7 +67,7 @@ div#wrapper > * {
 		<img src="../files/image9.jpg">
 		<img src="../files/image10.jpg">
 		<img src="../files/image11.jpg">
-		<p>All Image Rights Reserved</p>
+		
 	</div>
 	<script type="text/javascript">
 	//init
@@ -77,6 +77,16 @@ div#wrapper > * {
 			onUpdate: loaderAnimation.update
 	});	
 	</script>
-	
+	<script type="text/javascript">
+         var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-8059670-3']);
+          _gaq.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+    </script>
 	</body>
 </html>
