--- a/examples/demo-append-sources.html
+++ b/examples/demo-append-sources.html
@@ -42,7 +42,7 @@ div#wrapper > * {
 </head>
 <body>
 	<div id="html5Loader"></div>
-	<div id="wrapper"><p>All Image Rights Reserved</p></div>
+	<div id="wrapper"></div>
 	<script type="text/javascript">
 	//init
 	var loaderAnimation = $("#html5Loader").LoaderAnimation({
@@ -59,5 +59,16 @@ div#wrapper > * {
 			}
 	});	
 	</script>
+	<script type="text/javascript">
+         var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-8059670-3']);
+          _gaq.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+    </script>
 	</body>
 </html>
