--- a/examples/demo-big-counter.html
+++ b/examples/demo-big-counter.html
@@ -76,7 +76,7 @@ div#wrapper > * {
 	//init
 	var loaderAnimation = $("#html5Loader").LoaderAnimation();
 	$.html5Loader({
-			getFilesToLoadJSON:'../js/files.json',
+			filesToLoad:'../js/files.json',
 			onUpdate: loaderAnimation.update
 	});	
 	</script>
