--- a/examples/demo-line.html
+++ b/examples/demo-line.html
@@ -35,8 +35,8 @@ div#wrapper > * {
 }
 </style>
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="../js/animations/jQuery.html5Loader.line.js"></script>
-	<script src="../js/jQuery.html5Loader.js"></script>
+	<script src="../src/animations/jquery.html5Loader.line.js"></script>
+	<script src="../src/jquery.html5Loader.js"></script>
 
 </head>
 <body>
