some small fixes

--- a/examples/demo-big-counter.html
+++ b/examples/demo-big-counter.html
@@ -80,7 +80,7 @@ div#wrapper > * {
 		}
 	});
 	$.html5Loader({
-			filesToLoad:'../js/files.json',
+			filesToLoad:'../src/files.json',
 			onComplete: function () {
 				console.log("All the assets are loaded!")
 			},
