--- a/examples/demo-circular.html
+++ b/examples/demo-circular.html
@@ -77,7 +77,7 @@ var loaderAnimation = $("#html5Loader").LoaderAnimation({
 	}
 });
 $.html5Loader({
-		filesToLoad:'../js/files.json',
+		filesToLoad:'../src/files.json',
 		onComplete: function () {
 			console.log("All the assets are loaded!")
 		},
