--- a/examples/demo-append-sources.html
+++ b/examples/demo-append-sources.html
@@ -52,7 +52,7 @@ div#wrapper > * {
 		}
 	});
 	$.html5Loader({
-			filesToLoad:'../js/files.json',
+			filesToLoad:'../src/files.json',
 			onUpdate: loaderAnimation.update,
 			onComplete: function () {
 				console.log("All the assets are loaded!")
