--- a/examples/demo-line.html
+++ b/examples/demo-line.html
@@ -77,7 +77,7 @@ div#wrapper > * {
 		}
 	});
 	$.html5Loader({
-			filesToLoad:'../js/files.json',
+			filesToLoad:'../src/files.json',
 			onComplete: function () {
 				console.log("All the assets are loaded!")
 			},
