--- a/examples/demo-append-sources.html
+++ b/examples/demo-append-sources.html
@@ -36,8 +36,8 @@ div#wrapper > * {
 }
 </style>
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="../src/animations/jquery.big-counter.js"></script>
-	<script src="../src/jquery.html5Loader.js"></script>
+	<script src="../js/animations/jQuery.big-counter.js"></script>
+	<script src="../js/jQuery.html5Loader.js"></script>
 
 </head>
 <body>
@@ -47,23 +47,23 @@ div#wrapper > * {
 	//init
 	var loaderAnimation = $("#html5Loader").LoaderAnimation({
 		font: "normal 800px Lobster Two",
-		onComplete:function(){
+		onComplete: function() {
 			console.log("preloader animation completed!")
 		}
 	});
 	$.html5Loader({
-			filesToLoad:'../js/files.json',
-			onUpdate: loaderAnimation.update,
-			onComplete: function () {
-				console.log("All the assets are loaded!")
-			},
-			onElementLoaded: function ( obj, elm ){
-				if(obj.type !== "TEXT" && obj.type !== "SCRIPT") {
-					$("#wrapper").append(elm);
-			
-				}
+		filesToLoad: '../js/files.json',
+		onUpdate: loaderAnimation.update,
+		onComplete: function() {
+			console.log("All the assets are loaded!")
+		},
+		onElementLoaded: function(obj, elm) {
+			if (obj.type !== "TEXT" && obj.type !== "SCRIPT") {
+				$("#wrapper").append(elm);
+
 			}
-	});	
+		}
+	});
 	</script>
 
 	</body>
