--- a/examples/demo-big-counter.html
+++ b/examples/demo-big-counter.html
@@ -38,8 +38,8 @@ div#wrapper > * {
 }
 </style>
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="../src/animations/jquery.big-counter.js"></script>
-	<script src="../src/jquery.html5Loader.js"></script>
+	<script src="../js/animations/jQuery.big-counter.js"></script>
+	<script src="../js/jQuery.html5Loader.js"></script>
 
 </head>
 <body>
@@ -73,19 +73,18 @@ div#wrapper > * {
 		
 	</div>
 	<script type="text/javascript">
-	//init
-	var loaderAnimation = $("#html5Loader").LoaderAnimation({
-		onComplete:function(){
-			console.log("preloader animation completed!")
-		}
-	});
-	$.html5Loader({
-			filesToLoad:'../js/files.json',
-			onComplete: function () {
+		var loaderAnimation = $("#html5Loader").LoaderAnimation({
+			onComplete: function() {
+				console.log("preloader animation completed!")
+			}
+		});
+		$.html5Loader({
+			filesToLoad: '../js/files.json',
+			onComplete: function() {
 				console.log("All the assets are loaded!")
 			},
 			onUpdate: loaderAnimation.update
-	});	
+		});
 	</script>
 
 	</body>
