--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
           <h1>
 <a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Introduction</h1>
 
-<p>jQuery.html5Loader can preload <b>images</b>, html5 <b>video</b> and <b>audio</b> sources, <b>script</b> and <b>text</b> files.
-This plugin needs a <b>JSON</b> file to get the files that it has to preload (or at least you can use also a javascript object), and it provides an easy API to communicate the state of loading.</p>
+<p>jQuery.html5Loader can preload <b>images</b>, html5 <b>video</b> and <b>audio</b> sources, <b>css</b>, <b>script</b> and <b>text</b> files.
+This plugin needs a <b>JSON</b> file to get the files that must be preloaded (you can use also use a javascript object as well), and it provides an easy API to give you the the amount of file loaded in percentage.
+All the javascript and css files will be automatically loaded and injected into the DOM for all the rest</p>
 
 <h2>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
@@ -45,12 +46,15 @@ This plugin needs a <b>JSON</b> file to get the files that it has to preload (or
 <li>
 <b>fun</b>: inside the package you could find some preloading animation examples, customizable and ready to use</li>
 </ul><h2>
-<a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
+<a name="demos" class="anchor" href="#demos"><span class="octicon octicon-link"></span></a>Demos</h2>
 
-<p><a href="https://gianlucaguarini.github.com/jquery.html5loader/">https://gianlucaguarini.github.com/jquery.html5loader/</a></p>
-
-<h2>
-<a name="jqueryhtml5loader-in-production" class="anchor" href="#jqueryhtml5loader-in-production"><span class="octicon octicon-link"></span></a>jQuery.html5loader in production</h2>
+<ul>
+<li><a href="https://gianlucaguarini.github.com/jquery.html5loader/examples/demo-append-sources.html">Append the files loaded on the fly</a></li>
+<li><a href="https://gianlucaguarini.github.com/jquery.html5loader/examples/demo-big-counter.html">Big counter animation</a></li>
+<li><a href="https://gianlucaguarini.github.com/jquery.html5loader/examples/demo-circular.html">Circular preloader</a></li>
+<li><a href="https://gianlucaguarini.github.com/jquery.html5loader/examples/demo-line.html">Line preloader</a></li>
+</ul><h2>
+<a name="production-websites-using-jqueryhtml5loader" class="anchor" href="#production-websites-using-jqueryhtml5loader"><span class="octicon octicon-link"></span></a>Production websites using jQuery.html5loader</h2>
 
 <ul>
 <li><a href="http://www.mobi-myhome.ch">http://www.mobi-myhome.ch</a></li>
@@ -61,80 +65,83 @@ This plugin needs a <b>JSON</b> file to get the files that it has to preload (or
 <h3>
 <a name="1-create-a-json-file-like-this-containing-all-the-files-you-need-to-preload--size-in-bytes-" class="anchor" href="#1-create-a-json-file-like-this-containing-all-the-files-you-need-to-preload--size-in-bytes-"><span class="octicon octicon-link"></span></a>1 Create a JSON file like this, containing all the files you need to preload ( size in bytes ):</h3>
 
-<pre><code>
-{
-        "files": [
-            {
-                "type":"SCRIPT",
-                "source":"../path/to/your/script.js",
-                "size":4.096
-            },
-            {
-                "type":"IMAGE",
-                "source":"../path/to/your/image.jpg",
-                "size":620
-            },
-            {
-                "type":"TEXT",
-                "source":"../path/to/your/text.txt",
-                "size":44
-            },
-            {
-                "type":"VIDEO",
-                "sources": {
-                    "webm":{
-                        "source":"../path/to/your/video.webm",
-                        "size":5054.976
-                    },
-                    "ogg":{
-                        "source":"../path/to/your/video.ogg",
-                        "size":2932.736
-                    },
-                    "mp4":{
-                        "source":"../path/to/your/video.mp4",
-                        "size":9285.632
-                    }
-                }
-            },
-            {
-                "type":"AUDIO",
-                "sources": {
-                    "mp3":{
-                        "source":"../path/to/your/audio.mp3",
-                        "size":9285.632
-                    },
-                    "ogg":{
-                        "source":"../path/to/your/audio.ogg",
-                        "size":2089.688
-                    }
-                }
-            }
-        ]
-    }
-</code></pre>
+<div class="highlight highlight-json"><pre>
+<span class="p">{</span>
+    <span class="nt">"files"</span><span class="p">:</span> <span class="p">[</span>
+      <span class="p">{</span>
+        <span class="nt">"type"</span><span class="p">:</span><span class="s2">"SCRIPT"</span><span class="p">,</span>
+        <span class="nt">"source"</span><span class="p">:</span><span class="s2">"../path/to/your/script.js"</span><span class="p">,</span>
+        <span class="nt">"size"</span><span class="p">:</span><span class="mf">4.096</span>
+      <span class="p">},</span>
+      <span class="p">{</span>
+        <span class="nt">"type"</span><span class="p">:</span><span class="s2">"IMAGE"</span><span class="p">,</span>
+        <span class="nt">"source"</span><span class="p">:</span><span class="s2">"../path/to/your/image.jpg"</span><span class="p">,</span>
+        <span class="nt">"size"</span><span class="p">:</span><span class="mi">620</span>
+      <span class="p">},</span>
+      <span class="p">{</span>
+        <span class="nt">"type"</span><span class="p">:</span> <span class="s2">"CSS"</span><span class="p">,</span>
+        <span class="nt">"source"</span><span class="p">:</span> <span class="s2">"../files/test.css"</span><span class="p">,</span>
+        <span class="nt">"size"</span><span class="p">:</span> <span class="mf">16.819</span>
+      <span class="p">},</span>
+      <span class="p">{</span>
+        <span class="nt">"type"</span><span class="p">:</span><span class="s2">"TEXT"</span><span class="p">,</span>
+        <span class="nt">"source"</span><span class="p">:</span><span class="s2">"../path/to/your/text.txt"</span><span class="p">,</span>
+        <span class="nt">"size"</span><span class="p">:</span><span class="mi">44</span>
+      <span class="p">},</span>
+      <span class="p">{</span>
+        <span class="nt">"type"</span><span class="p">:</span><span class="s2">"VIDEO"</span><span class="p">,</span>
+        <span class="nt">"sources"</span><span class="p">:</span> <span class="p">{</span>
+          <span class="nt">"webm"</span><span class="p">:{</span>
+            <span class="nt">"source"</span><span class="p">:</span><span class="s2">"../path/to/your/video.webm"</span><span class="p">,</span>
+            <span class="nt">"size"</span><span class="p">:</span><span class="mf">5054.976</span>
+          <span class="p">},</span>
+          <span class="nt">"ogg"</span><span class="p">:{</span>
+            <span class="nt">"source"</span><span class="p">:</span><span class="s2">"../path/to/your/video.ogg"</span><span class="p">,</span>
+            <span class="nt">"size"</span><span class="p">:</span><span class="mf">2932.736</span>
+          <span class="p">},</span>
+          <span class="nt">"mp4"</span><span class="p">:{</span>
+            <span class="nt">"source"</span><span class="p">:</span><span class="s2">"../path/to/your/video.mp4"</span><span class="p">,</span>
+            <span class="nt">"size"</span><span class="p">:</span><span class="mf">9285.632</span>
+          <span class="p">}</span>
+        <span class="p">}</span>
+      <span class="p">},</span>
+      <span class="p">{</span>
+        <span class="nt">"type"</span><span class="p">:</span><span class="s2">"AUDIO"</span><span class="p">,</span>
+        <span class="nt">"sources"</span><span class="p">:</span> <span class="p">{</span>
+          <span class="nt">"mp3"</span><span class="p">:{</span>
+            <span class="nt">"source"</span><span class="p">:</span><span class="s2">"../path/to/your/audio.mp3"</span><span class="p">,</span>
+            <span class="nt">"size"</span><span class="p">:</span><span class="mf">9285.632</span>
+          <span class="p">},</span>
+          <span class="nt">"ogg"</span><span class="p">:{</span>
+            <span class="nt">"source"</span><span class="p">:</span><span class="s2">"../path/to/your/audio.ogg"</span><span class="p">,</span>
+            <span class="nt">"size"</span><span class="p">:</span><span class="mf">2089.688</span>
+          <span class="p">}</span>
+        <span class="p">}</span>
+      <span class="p">}</span>
+    <span class="p">]</span>
+  <span class="p">}</span>
+</pre></div>
 
 <h3>
 <a name="2-import-the-plugin-into-your-page" class="anchor" href="#2-import-the-plugin-into-your-page"><span class="octicon octicon-link"></span></a>2 Import the plugin into your page:</h3>
 
-<pre><code>
-&lt;script src="http://code.jquery.com/jquery-latest.min.js"&gt;&lt;/script&gt;
-&lt;script src="../js/jQuery.html5Loader.js"&gt;&lt;/script&gt;
-
-</code></pre>
+<div class="highlight highlight-html"><pre>
+<span class="nt">&lt;script </span><span class="na">src=</span><span class="s">"http://code.jquery.com/jquery-latest.min.js"</span><span class="nt">&gt;&lt;/script&gt;</span>
+<span class="nt">&lt;script </span><span class="na">src=</span><span class="s">"../js/jQuery.html5Loader.js"</span><span class="nt">&gt;&lt;/script&gt;</span>
+</pre></div>
 
 <h3>
 <a name="3-initialize-the-plugin-setting-the-callback-functions" class="anchor" href="#3-initialize-the-plugin-setting-the-callback-functions"><span class="octicon octicon-link"></span></a>3 Initialize the plugin setting the callback functions:</h3>
 
-<pre><code>
-$.html5Loader({
-            filesToLoad:        '../js/files.json', // this could be a JSON or simply a javascript object
-            onBeforeLoad:       function () {},
-            onComplete:         function () {},
-            onElementLoaded:    function ( obj, elm) { },
-            onUpdate:           function ( percentage ) {}      
-}); 
-
-</code></pre>
+<div class="highlight highlight-javascript"><pre>
+<span class="nx">$</span><span class="p">.</span><span class="nx">html5Loader</span><span class="p">({</span>
+      <span class="nx">filesToLoad</span><span class="o">:</span>    <span class="s1">'../js/files.json'</span><span class="p">,</span> <span class="c1">// this could be a JSON or simply a javascript object</span>
+      <span class="nx">onBeforeLoad</span><span class="o">:</span>       <span class="kd">function</span> <span class="p">()</span> <span class="p">{},</span>
+      <span class="nx">onComplete</span><span class="o">:</span>         <span class="kd">function</span> <span class="p">()</span> <span class="p">{},</span>
+      <span class="nx">onElementLoaded</span><span class="o">:</span>    <span class="kd">function</span> <span class="p">(</span> <span class="nx">obj</span><span class="p">,</span> <span class="nx">elm</span><span class="p">)</span> <span class="p">{</span> <span class="p">},</span>
+      <span class="nx">onUpdate</span><span class="o">:</span>           <span class="kd">function</span> <span class="p">(</span> <span class="nx">percentage</span> <span class="p">)</span> <span class="p">{}</span>    
+<span class="p">});</span> 
+</pre></div>
 
 <h1>
 <a name="api" class="anchor" href="#api"><span class="octicon octicon-link"></span></a>API</h1>
@@ -144,11 +151,11 @@ $.html5Loader({
 
 <ul>
 <li>
-<code>onBeforeLoad</code> It is triggered before the loading process starts</li>
+<code>onBeforeLoad</code> It is triggered right before the plugin starts loading all the files</li>
 <li>
 <code>onComplete</code> It is triggered when the plugin finishes to load all the sources</li>
 <li>
-<code>onMediaError</code> This function is invoked in case of any error occurred during the media element fetch
+<code>onMediaError</code> This function is called in case there's an error during the preloading
 
 <ul>
 <li>
@@ -158,7 +165,7 @@ $.html5Loader({
 </ul>
 </li>
 <li>
-<code>onElementLoaded</code> It is triggered anytime a new element of the json array is loaded, (ATTENTION IF AN ELEMENT IS NOT SUPPORTED IT WILL NEVER PASS TROUGH THIS FUNCTION). 
+<code>onElementLoaded</code> It is triggered anytime a new element of your files list gets loaded, (ATTENTION IF AN ELEMENT IS NOT SUPPORTED IT WILL NEVER PASS TROUGH THIS FUNCTION). 
 
 <ul>
 <li>
@@ -180,13 +187,7 @@ $.html5Loader({
 
 <ul>
 <li>Internet Explorer 9 and 10 do not return any value using the method <code>canPlayType</code> on a video or audio element ( <a href="http://modernizr.com/docs/#audio">http://modernizr.com/docs/#audio</a> ). For these browsers we don't preload any HTML5 media format</li>
-<li>on mobile devices and on the iPad the preloading of any video or audio element is skipped because those devices can't preload those elements since a user interacts with them<br>
-</li>
-</ul><h1>
-<a name="todo-list" class="anchor" href="#todo-list"><span class="octicon octicon-link"></span></a>TODO LIST</h1>
-
-<ul>
-<li>create a nodejs script that is able to read files in a folder exporting the JSON file needed to preload them</li>
+<li>on mobile devices and on the iPad we cannot load any video or audio element because these devices can't preload those kind of elements until the user start dealing with them</li>
 </ul>
         </section>
 
