Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Jquery.html5loader</h1>
-        <h2>jQuery.html5Loader can preload images, html5 video and audio sources, script and text files. This plugin needs a JSON file to get the files that it has to preload, and it provides an easy API to communicate the state of loading.</h2>
+        <h2>jQuery.html5Loader can preload images, html5 video and audio sources, scripts, css, and text files.</h2>
         <a href="https://github.com/GianlucaGuarini/jquery.html5loader" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -31,9 +31,10 @@
           <h1>
 <a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Introduction</h1>
 
-<p>jQuery.html5Loader can preload <b>images</b>, html5 <b>video</b> and <b>audio</b> sources, <b>css</b>, <b>script</b> and <b>text</b> files.
-This plugin needs a <b>JSON</b> file to get the files that must be preloaded (you can use also use a javascript object as well), and it provides an easy API to give you the the amount of file loaded in percentage.
-All the javascript and css files will be automatically loaded and injected into the DOM for all the rest</p>
+<p>jQuery.html5Loader can preload <b>images</b>, html5 <b>video</b> and <b>audio</b> sources, <b>css</b>, <b>scripts</b> and <b>text</b> files.
+This plugin needs a <b>JSON</b> file to get the files that must be preloaded (you can use also use a javascript object as well), and it provides an easy API to give you the the amount of file loaded in percentage.</p>
+
+<p>All the javascript and css files will be automatically loaded and injected into the DOM</p>
 
 <h2>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
