--- a/examples/demo-big-counter.html
+++ b/examples/demo-big-counter.html
@@ -38,8 +38,8 @@ div#wrapper > * {
 }
 </style>
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="../js/animations/jQuery.big-counter.js"></script>
-	<script src="../js/jQuery.html5Loader.js"></script>
+	<script src="../src/animations/jquery.big-counter.js"></script>
+	<script src="../src/jquery.html5Loader.js"></script>
 
 </head>
 <body>
@@ -73,7 +73,6 @@ div#wrapper > * {
 		
 	</div>
 	<script type="text/javascript">
-
 	//init
 	var loaderAnimation = $("#html5Loader").LoaderAnimation({
 		onComplete:function(){
@@ -86,7 +85,7 @@ div#wrapper > * {
 				console.log("All the assets are loaded!")
 			},
 			onUpdate: loaderAnimation.update
-		});
+	});	
 	</script>
 
 	</body>
