--- a/examples/demo-append-sources.html
+++ b/examples/demo-append-sources.html
@@ -48,21 +48,22 @@ div#wrapper > * {
 	var loaderAnimation = $("#html5Loader").LoaderAnimation({
 		font: "normal 800px Lobster Two",
 		onComplete:function(){
-			console.log("preloader animation completed!")
+			console.log("preloader animation completed!");
 		}
 	});
 	$.html5Loader({
 			filesToLoad:'../src/files.json',
 			onUpdate: loaderAnimation.update,
+			stopExecution:true,
 			onComplete: function () {
-				console.log("All the assets are loaded!")
+				console.log("All the assets are loaded!");
 			},
 			onElementLoaded: function ( obj, elm ){
 				if(!~$.inArray(obj.type,["TEXT","SCRIPT","CSS"])) {
 					$("#wrapper").append(elm);
 				}
 			}
-	});	
+	});
 	</script>
 
 	</body>
